[package]
name = "osiris"
version = "0.1.0"
edition = "2021"
default-run = "osiris"

[dependencies]
bitflags = "2.6"
mlua = { version = "0.9", features = ["lua53", "vendored", "send"] }
rusqlite = { version = "0.31", features = ["bundled"] }
lzma-rs = "0.2"
byteorder = "1.5"

[dev-dependencies]
tempfile = "3.4"
